--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,6 @@ book:
   title: "Biological language models & Neural Networks"
   author: "Miche Nivard"
   date: "2/27/2025"
-  reader-mode: true
   chapters:
     - index.qmd
     - part: "DNA"
@@ -23,7 +22,7 @@ bibliography: references.bib
 format:
   html:
     theme:
-      - lex
+      - cosmo
 
 
 
