--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,8 @@ book:
     search: true
   chapters:
     - index.qmd
+    - Preamble1.qmd
+    - Preamble2.qmd
     - part: "DNA"
       chapters: 
         - Chapter1_DNA.qmd
@@ -22,7 +24,6 @@ book:
         - Chapter6_DNA.qmd
     - part: "Proteins"
     - part: "Multi-Modal-Biology"
-        - 
     - summary.qmd
     - references.qmd
 
