--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,6 +22,7 @@ book:
         - Chapter4_DNA.qmd
         - Chapter5_DNA.qmd
         - Chapter6_DNA.qmd
+    - Scaling_training.qmd    
     - part: "Proteins"
     - part: "Multi-Modal-Biology"
     - summary.qmd
