--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,6 +24,8 @@ book:
         - Chapter6_DNA.qmd
     - Scaling_training.qmd    
     - part: "Proteins"
+      chapters:
+        - Chapter1_Proteins.qmd
     - part: "Multi-Modal-Biology"
     - summary.qmd
     - references.qmd
