--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,6 +28,7 @@ book:
         - Chapter1_Proteins.qmd
         - Chapter2_Proteins.qmd
         - Chapter3_Proteins.qmd
+        - Chapter4_Proteins.qmd
     - part: "Multi-Modal-Biology"
     - summary.qmd
     - references.qmd
