--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,7 @@ book:
   title: "Biological Language Models & Neural Networks"
   reader-mode: true
   author: "Michel Nivard"
-  date: "2/27/2025"
+  date: today
   navbar:
     search: true
     logo: DNA.png
