--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,7 @@ book:
   author: "Michel Nivard"
   date: today
   navbar:
+    sharing: true
     search: true
     logo: DNA.png
     favicon: DNA.png
