new preamble chapter spellchecks

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,7 @@ book:
     - Preamble1.qmd
     - Preamble2.qmd
     - Preamble3.qmd
+    - Preamble4.qmd
     - part: "DNA"
       chapters: 
         - Chapter1_DNA.qmd
